@startuml Phase 2: Telemetry Sources & RAII

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor<<interface>> LightBlue
    BackgroundColor<<RAII>> LightGreen
    BackgroundColor<<RuleOfZero>> LightYellow
}

title Phase 2: Data Sources & Smart Resource Management

' ============================================
' Interfaces
' ============================================

interface ITelemetrySource <<interface>> {
    + {abstract} openSource(): bool
    + {abstract} readSource(out: string&): bool
    + {abstract} ~ITelemetrySource()
}

' ============================================
' RAII Classes (Rule of 5)
' ============================================

class SafeFile <<RAII>> {
    - fd: int
    - filepath: string
    __
    + SafeFile(path: string, flags: int)
    + ~SafeFile()
    --
    + SafeFile(const SafeFile&) = delete
    + operator=(const SafeFile&) = delete
    + SafeFile(SafeFile&&) noexcept
    + operator=(SafeFile&&) noexcept
    __
    + isValid(): bool
    + read(buffer: void*, count: size_t): ssize_t
    + write(buffer: void*, count: size_t): ssize_t
}

class SafeSocket <<RAII>> {
    - sockfd: int
    - socketPath: string
    - isServerSocket: bool
    __
    + SafeSocket()
    + ~SafeSocket()
    --
    + SafeSocket(const SafeSocket&) = delete
    + operator=(const SafeSocket&) = delete
    + SafeSocket(SafeSocket&&) noexcept
    + operator=(SafeSocket&&) noexcept
    __
    + createSocket(): bool
    + bind(path: string): bool
    + listen(backlog: int): bool
    + accept(): SafeSocket
    + connect(path: string): bool
    + read(buffer: void*, count: size_t): ssize_t
    + write(buffer: void*, count: size_t): ssize_t
}

' ============================================
' Rule of Zero Classes
' ============================================

class FileTelemetrySourceImpl <<RuleOfZero>> {
    - file: SafeFile
    - filepath: string
    __
    + FileTelemetrySourceImpl(path: string)
    + openSource(): bool
    + readSource(out: string&): bool
}

class SocketTelemetrySourceImpl <<RuleOfZero>> {
    - serverSocket: SafeSocket
    - clientSocket: SafeSocket
    - socketPath: string
    __
    + SocketTelemetrySourceImpl(path: string)
    + openSource(): bool
    + readSource(out: string&): bool
}

' ============================================
' Bonus: System Telemetry Writer
' ============================================

class SystemTelemetryWriter {
    - outputFile: SafeFile
    - outputPath: string
    __
    + SystemTelemetryWriter(path: string)
    + writeCpuTelemetry(): bool
    + writeMemoryTelemetry(): bool
    + isOpen(): bool
}

' ============================================
' Relationships
' ============================================

ITelemetrySource <|.. FileTelemetrySourceImpl : implements
ITelemetrySource <|.. SocketTelemetrySourceImpl : implements

FileTelemetrySourceImpl o-- SafeFile : uses (composition)
SocketTelemetrySourceImpl o-- SafeSocket : uses (composition)
SystemTelemetryWriter o-- SafeFile : uses (composition)

' ============================================
' Notes
' ============================================

note right of SafeFile
    **RAII Pattern**
    - Opens file in constructor
    - Closes file in destructor
    - Move-only (no copying)
    - Rule of 5
end note

note right of SafeSocket
    **RAII Pattern**
    - Creates socket in constructor
    - Closes socket in destructor
    - Move-only (no copying)
    - Rule of 5
end note

note right of FileTelemetrySourceImpl
    **Rule of Zero**
    - No manual resource management
    - Relies on SafeFile's RAII
    - All special members = default
end note

note bottom of SystemTelemetryWriter
    **Bonus Feature**
    Parses /proc/stat and /proc/meminfo
    Writes meaningful telemetry data
end note

@enduml
